<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="r1651.weatherapp.ui.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linear_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_light_background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/weatherIconImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/na" />

        <TextView
            android:id="@+id/conditionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/condition"
            android:textColor="@color/md_black_1000" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/location"
            android:textColor="@color/md_black_1000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/temperatureImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/temperature" />

            <TextView
                android:id="@+id/temperatureTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/temperature"
                android:textColor="@color/md_black_1000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/windImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/wind" />

            <TextView
                android:id="@+id/windTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/wind"
                android:textColor="@color/md_black_1000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/humidityImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/humidity" />

            <TextView
                android:id="@+id/humidityTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/humidity"
                android:textColor="@color/md_black_1000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pressureImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/pressure" />

            <TextView
                android:id="@+id/pressureTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/pressure"
                android:textColor="@color/md_black_1000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sunriseImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/sun" />

            <TextView
                android:id="@+id/sunriseTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/sunrise"
                android:textColor="@color/md_black_1000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sunsetImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/moon" />

            <TextView
                android:id="@+id/sunsetTextView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/sunset"
                android:textColor="@color/md_black_1000" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/yahoo" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>